cluster/download/weaver/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weaver
  namespace: download
spec:
  selector:
    app: weaver
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9090
