cluster/download/weaver/resources/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: weaver
  namespace: download
spec:
  endpointSelector:
    matchLabels:
      app: weaver
  ingress:
    - fromEntities:
        - host
        - remote-node
    - fromEndpoints:
        - {}
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - world
